Added logic for showing messages

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/index.html
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/index.html
@@ -20,6 +20,17 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script>
+        function showMessage(position, message, isSuccess) {
+            let element = "#Message-Player-" + position;
+            $(element).prepend('<div>' + message + '</div>');
+
+            $(element + ' div:first-child').fadeOut(3000, function () {
+                $(element).empty();
+            });
+        }
+    </script>
 </body>
 
 </html>
