Show closed deck icon or deck suit image when there are no more cards in the deck

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/index.html
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/index.html
@@ -30,6 +30,14 @@
                 $(element).empty();
             });
         }
+
+        function showTrumpSuit(x, y) {
+            $('#TrumpSuit').css('background-position', x + 'px ' + y + 'px');
+        }
+
+        function closeDeck() {
+            $('#ClosedDeck').show();
+        }
     </script>
 </body>
 
