Show scoreboards at the end of each round

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/index.html
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/wwwroot/index.html
@@ -38,6 +38,15 @@
         function closeDeck() {
             $('#ClosedDeck').show();
         }
+
+        function showScoreboard() {
+            $('#Scoreboard').show();
+        }
+
+        $(document).on('click', '#Scoreboard button', function () {
+            $('#Scoreboard').hide();
+            $('#ClosedDeck').hide();
+        });
     </script>
 </body>
 
